# mmap-bloom-filter

./: .gitignore  aaa.py  pyproject.toml  readme.md  tools.py
core/: filebitarray.py  murmurhash.py  persistfilter.py  primernumber.py  virtualmem.py
mutiwrite/: persistfilter32t.py
rpc/: httpserver.py  rpcserver.py  tcpserver.py
test/: pytest.ini  test_filebitarray.py  test_http_server.py  test_murmurhash.py  test_persistfilter.py  test_rpcserver.py  test_tcpserver.py
