[tool.poetry]
name = "persistfilter"
version = "0.1.0"
description = ""
authors = ["dream2333"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mmhash3 = "^3.0.1"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
