[tool.poetry]
name = "persistfilter"
version = "0.1.0"
description = ""
authors = ["dream2333"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
#mmr3 = "^1.3.1"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"
numba = "^0.56.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
